--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Abhishek Gupta Portfolio</title>
+    <title>Abhishek Gupta</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Maha Personal cv/resume template for professional and personal website." />
